--- a/css/style.css
+++ b/css/style.css
@@ -10,6 +10,7 @@ body {
   height: 100vh;
   width: 100vw;
   justify-content: center;
+  background-color: #dccfbf;
 }
 
 .container {
@@ -19,12 +20,13 @@ body {
   justify-content: center;
   align-items: center;
   min-width: 200px;
-  border: 4px solid black;
   padding: 20px;
 }
 
 .display-container {
-  border: 2px solid green;
+  border: 7px solid #494136;
+  border-bottom: none;
+  border-radius: 6px 6px 0px 0px;
   height: 10%;
   width: 45%;
 }
@@ -32,15 +34,19 @@ body {
 .button-container {
   display: flex;
   flex-wrap: wrap;
-  border: 2px solid red;
+  border: 5px solid #494136;
+  border-radius: 0px 0px 6px 6px;
   height: 45%;
   width: 45%;
 }
 
 button {
   flex: 1 1 20%;
+  background-color: #dccfbf;
+  border: 2px solid #494136;
 }
 
 .footer {
   height: 50px;
+  background-color: gray;
 }
