--- a/css/style.css
+++ b/css/style.css
@@ -24,11 +24,36 @@ body {
 }
 
 .display-container {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-end;
   border: 7px solid #494136;
   border-bottom: none;
   border-radius: 6px 6px 0px 0px;
   height: 10%;
   width: 45%;
+  padding: 3px;
+  background-color: #BDBDBD;
+  box-shadow: 0px -10px 10px 10px rgba(0, 0, 0, 0.3);
+}
+
+p {
+  width: 100%;
+  height: 50%;
+  display: flex;
+  justify-content: flex-end;
+  align-items: center;
+}
+
+.history {
+  flex: 1;
+  font-size: 1.5em;
+  color: rgba(0, 0, 0, 0.7);
+  align-items: flex-end;
+}
+
+.display {
+  font-size: 2em;
 }
 
 .button-container {
@@ -38,6 +63,7 @@ body {
   border-radius: 0px 0px 6px 6px;
   height: 45%;
   width: 45%;
+  box-shadow: 0px 10px 10px 10px rgba(0, 0, 0, 0.3);
 }
 
 button {
@@ -68,5 +94,5 @@ button {
 
 .footer {
   height: 50px;
-  background-color: gray;
+  background-color: rgba(0, 0, 0, 0.7);
 }
