--- a/css/style.css
+++ b/css/style.css
@@ -34,7 +34,7 @@ body {
   width: 45%;
   padding: 3px;
   background-color: #BDBDBD;
-  box-shadow: 0px -10px 10px 10px rgba(0, 0, 0, 0.3);
+  box-shadow: 0px -10px 12px 10px rgba(0, 0, 0, 0.3);
 }
 
 p {
@@ -63,7 +63,8 @@ p {
   border-radius: 0px 0px 6px 6px;
   height: 45%;
   width: 45%;
-  box-shadow: 0px 10px 10px 10px rgba(0, 0, 0, 0.3);
+  box-shadow: 0px 10px 12px 10px rgba(0, 0, 0, 0.3);
+  background-color: #494136;
 }
 
 button {
@@ -72,6 +73,7 @@ button {
   border: 2px solid #494136;
   font-weight: bold;
   color: #494136;
+  border-radius: 5px;
 }
 
 .operator,
@@ -93,6 +95,18 @@ button {
 }
 
 .footer {
-  height: 50px;
+  height: 80px;
   background-color: rgba(0, 0, 0, 0.7);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+a {
+  text-decoration: none;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 10px;
+  color: #fff;
 }
